<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <LinearLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressBarLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/circle_button_radius"
            android:layout_height="@dimen/circle_button_radius"
            android:layout_marginEnd="@dimen/margin_30dp"
            android:layout_marginRight="@dimen/margin_30dp"
            android:background="@drawable/circle_button_grey"
            android:text="@string/cancel_icon"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/cancel_button_text_size" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="@dimen/circle_button_radius"
            android:layout_height="@dimen/circle_button_radius"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginStart="@dimen/margin_30dp"
            android:background="@drawable/circle_button_red"
            android:text="@string/right_icon"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnLayout"
        android:layout_marginTop="@dimen/margin_20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:layout_marginStart="@dimen/margin_20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/iconCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.07"
                    android:text="@string/company_icon"
                    android:textColor="@color/icon_color"
                    android:textSize="@dimen/font_icon_size" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_weight="0.93"
                    android:textColorHint="@color/hint_color">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_company_name"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size"
                        app:backgroundTint="@color/icon_color" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/iconReferralCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.07"
                    android:text="@string/referral_icon"
                    android:textColor="@color/icon_color"
                    android:textSize="@dimen/font_icon_size" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_weight="0.93"
                    android:textColorHint="@color/hint_color">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_referral_code"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size"
                        app:backgroundTint="@color/icon_color" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/iconGstin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.07"
                    android:text="@string/hint_gstin"
                    android:textColor="@color/hint_color"
                    android:textSize="@dimen/text_size_12sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_weight="0.93"
                    android:textColorHint="@color/hint_color">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_gstin"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size"
                        app:backgroundTint="@color/icon_color" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/iconAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.07"
                    android:text="@string/account_icon"
                    android:textColor="@color/icon_color"
                    android:textSize="@dimen/font_icon_size" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_weight="0.93"
                    android:textColorHint="@color/hint_color">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_account_number"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size"
                        app:backgroundTint="@color/icon_color" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/iconIfsc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.07"
                    android:text="@string/ifsc"
                    android:textColor="@color/icon_color"
                    android:textSize="@dimen/text_size_12sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_weight="0.93"
                    android:textColorHint="@color/hint_color">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_ifcs_code"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size"
                        app:backgroundTint="@color/icon_color" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/iconBank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.07"
                    android:text="@string/bank_icon"
                    android:textColor="@color/icon_color"
                    android:textSize="@dimen/font_icon_size" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_weight="0.93"
                    android:textColorHint="@color/hint_color">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_bank_name"
                        android:maxLines="2"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size"
                        app:backgroundTint="@color/icon_color" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>