<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/hint_color" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOne"
        android:layout_width="@dimen/circle_button_radius"
        android:layout_height="@dimen/circle_button_radius"
        android:layout_above="@id/progressBarLayout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_button_red" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnOne"
        android:layout_marginTop="@dimen/margin_20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:layout_marginStart="@dimen/margin_20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp">

                <TextView
                    android:id="@+id/iconFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/first_name_icon"
                    android:textColor="@color/icon_color"
                    android:textSize="@dimen/font_icon_size" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_toEndOf="@id/iconFirstName"
                    android:layout_toRightOf="@id/iconFirstName">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp">

                <TextView
                    android:id="@+id/iconLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/icon_color"
                    android:textSize="@dimen/font_icon_size" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_toEndOf="@id/iconLastName"
                    android:layout_toRightOf="@id/iconLastName">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_last_name"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp">

                <TextView
                    android:id="@+id/iconNickName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/icon_color"
                    android:textSize="@dimen/font_icon_size" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_toEndOf="@id/iconNickName"
                    android:layout_toRightOf="@id/iconNickName">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_nick_name"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp">

                <TextView
                    android:id="@+id/iconEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/email_icon"
                    android:textColor="@color/icon_color"
                    android:textSize="@dimen/font_icon_size" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_toEndOf="@id/iconEmail"
                    android:layout_toRightOf="@id/iconEmail">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp">

                <TextView
                    android:id="@+id/iconMobileNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/mobile_number_icon"
                    android:textColor="@color/icon_color"
                    android:textSize="@dimen/font_icon_size" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_toEndOf="@id/iconMobileNumber"
                    android:layout_toRightOf="@id/iconMobileNumber">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_mobile_number"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp">

                <TextView
                    android:id="@+id/iconAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/address_icon"
                    android:textColor="@color/icon_color"
                    android:textSize="@dimen/font_icon_size" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_toEndOf="@id/iconAddress"
                    android:layout_toRightOf="@id/iconAddress">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address"
                        android:maxLines="2"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>